create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3018,6 +3018,145 @@ body {
 .cid-r6hlxI09WX B {
   color: #000000;
 }
+.cid-r7v9TUfRZA {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r7v9TUfRZA H2 {
+  color: #ffffff;
+}
+.cid-r7vaUxokCa {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-r7vaUxokCa .mbr-text,
+.cid-r7vaUxokCa blockquote {
+  color: #767676;
+}
+.cid-r7vaUxokCa .mbr-text P {
+  text-align: center;
+  color: #000000;
+}
+.cid-r7vaUxokCa .mbr-text B {
+  color: #000000;
+}
+.cid-r7vaUxokCa .mbr-text {
+  text-align: center;
+  color: #000000;
+}
+.cid-r7v6jb6h1C {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r7v6jb6h1C .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r7v6jb6h1C .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-r7v6jb6h1C .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-r7v6jb6h1C .team-item .item-image img {
+  width: 100%;
+}
+.cid-r7v6jb6h1C .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-r7v6jb6h1C .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-r7v6jb6h1C .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-r7v6jb6h1C .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-r7v7kXVpfQ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r7v7kXVpfQ .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r7v7kXVpfQ .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-r7v7kXVpfQ .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-r7v7kXVpfQ .team-item .item-image img {
+  width: 100%;
+}
+.cid-r7v7kXVpfQ .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-r7v7kXVpfQ .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-r7v7kXVpfQ .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-r7v7kXVpfQ .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-r7v7lBxPmI {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-r7v7lBxPmI .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r7v7lBxPmI .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-r7v7lBxPmI .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-r7v7lBxPmI .team-item .item-image img {
+  width: 100%;
+}
+.cid-r7v7lBxPmI .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-r7v7lBxPmI .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-r7v7lBxPmI .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-r7v7lBxPmI .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
 .cid-r6KBBLH8Pt {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -3473,6 +3612,74 @@ body {
 .cid-r6hk0HtDja .mbr-section-title B {
   color: #1ea416;
 }
+.cid-r6hjaerSWL {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+}
+@media (min-width: 992px) {
+  .cid-r6hjaerSWL .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-r6hjaerSWL .mbr-figure {
+    padding-top: 3rem;
+  }
+}
+.cid-r6hjaerSWL .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-r6hjaerSWL .media-container-row .mbr-figure {
+    padding-left: 0;
+    padding-right: 4rem;
+  }
+}
+.cid-r6hjaerSWL .mbr-text,
+.cid-r6hjaerSWL .mbr-section-btn {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6hjaerSWL .mbr-section-title {
+  color: #1ea416;
+  text-align: left;
+}
+.cid-r6hhvypFfz {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+}
+@media (min-width: 992px) {
+  .cid-r6hhvypFfz .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-r6hhvypFfz .mbr-figure {
+    padding-top: 3rem;
+  }
+}
+.cid-r6hhvypFfz .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-r6hhvypFfz .media-container-row .mbr-figure {
+    padding-left: 0;
+    padding-right: 4rem;
+  }
+}
+.cid-r6hhvypFfz .mbr-text,
+.cid-r6hhvypFfz .mbr-section-btn {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6hhvypFfz .mbr-section-title {
+  color: #1ea416;
+  text-align: left;
+}
 .cid-r6EX5HD4wC {
   padding-top: 0px;
   padding-bottom: 30px;
@@ -3510,37 +3717,37 @@ body {
 .cid-r6EX5HD4wC .mbr-section-title B {
   color: #1ea416;
 }
-.cid-r6hhvypFfz {
+.cid-r6EXCj5Qwj {
   padding-top: 0px;
   padding-bottom: 30px;
   background: linear-gradient(45deg, #ffffff, #ffffff);
 }
 @media (min-width: 992px) {
-  .cid-r6hhvypFfz .mbr-figure {
+  .cid-r6EXCj5Qwj .mbr-figure {
     padding-left: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-r6hhvypFfz .mbr-figure {
+  .cid-r6EXCj5Qwj .mbr-figure {
     padding-top: 3rem;
   }
 }
-.cid-r6hhvypFfz .media-container-row {
+.cid-r6EXCj5Qwj .media-container-row {
   flex-direction: row-reverse;
   -webkit-flex-direction: row-reverse;
 }
 @media (min-width: 992px) {
-  .cid-r6hhvypFfz .media-container-row .mbr-figure {
+  .cid-r6EXCj5Qwj .media-container-row .mbr-figure {
     padding-left: 0;
     padding-right: 4rem;
   }
 }
-.cid-r6hhvypFfz .mbr-text,
-.cid-r6hhvypFfz .mbr-section-btn {
+.cid-r6EXCj5Qwj .mbr-text,
+.cid-r6EXCj5Qwj .mbr-section-btn {
   color: #000000;
   text-align: left;
 }
-.cid-r6hhvypFfz .mbr-section-title {
+.cid-r6EXCj5Qwj .mbr-section-title {
   color: #1ea416;
   text-align: left;
 }
@@ -3614,7 +3821,7 @@ body {
 }
 .cid-r6EXkUe5Ux {
   padding-top: 0px;
-  padding-bottom: 30px;
+  padding-bottom: 75px;
   background: linear-gradient(45deg, #ffffff, #ffffff);
 }
 @media (min-width: 992px) {
@@ -3643,74 +3850,6 @@ body {
   text-align: left;
 }
 .cid-r6EXkUe5Ux .mbr-section-title {
-  color: #1ea416;
-  text-align: left;
-}
-.cid-r6hjaerSWL {
-  padding-top: 0px;
-  padding-bottom: 30px;
-  background: linear-gradient(45deg, #ffffff, #ffffff);
-}
-@media (min-width: 992px) {
-  .cid-r6hjaerSWL .mbr-figure {
-    padding-left: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-r6hjaerSWL .mbr-figure {
-    padding-top: 3rem;
-  }
-}
-.cid-r6hjaerSWL .media-container-row {
-  flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
-}
-@media (min-width: 992px) {
-  .cid-r6hjaerSWL .media-container-row .mbr-figure {
-    padding-left: 0;
-    padding-right: 4rem;
-  }
-}
-.cid-r6hjaerSWL .mbr-text,
-.cid-r6hjaerSWL .mbr-section-btn {
-  color: #000000;
-  text-align: left;
-}
-.cid-r6hjaerSWL .mbr-section-title {
-  color: #1ea416;
-  text-align: left;
-}
-.cid-r6EXCj5Qwj {
-  padding-top: 0px;
-  padding-bottom: 75px;
-  background: linear-gradient(45deg, #ffffff, #ffffff);
-}
-@media (min-width: 992px) {
-  .cid-r6EXCj5Qwj .mbr-figure {
-    padding-left: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-r6EXCj5Qwj .mbr-figure {
-    padding-top: 3rem;
-  }
-}
-.cid-r6EXCj5Qwj .media-container-row {
-  flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
-}
-@media (min-width: 992px) {
-  .cid-r6EXCj5Qwj .media-container-row .mbr-figure {
-    padding-left: 0;
-    padding-right: 4rem;
-  }
-}
-.cid-r6EXCj5Qwj .mbr-text,
-.cid-r6EXCj5Qwj .mbr-section-btn {
-  color: #000000;
-  text-align: left;
-}
-.cid-r6EXCj5Qwj .mbr-section-title {
   color: #1ea416;
   text-align: left;
 }
