--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -35,17 +35,17 @@ body {
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 .display-4 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.28rem;
 }
 .display-5 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1.8rem;
+  font-size: 1.65rem;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.88rem;
+  font-size: 2.64rem;
 }
 .display-7 {
   font-family: 'Rubik', sans-serif;
@@ -71,14 +71,14 @@ body {
     line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
-    font-size: 0.8rem;
-    font-size: calc( 1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.64rem;
+    font-size: calc( 0.93rem + (0.8 - 0.93) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (0.93rem + (0.8 - 0.93) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.44rem;
-    font-size: calc( 1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.32rem;
+    font-size: calc( 1.2275rem + (1.65 - 1.2275) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.2275rem + (1.65 - 1.2275) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -2938,24 +2938,17 @@ body {
 .cid-r7v9TUfRZA H2 {
   color: #ffffff;
 }
-.cid-r7vaUxokCa {
+.cid-r7BFfSCk90 {
   padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
+  padding-bottom: 30px;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
 }
-.cid-r7vaUxokCa .mbr-text,
-.cid-r7vaUxokCa blockquote {
-  color: #767676;
+.cid-r7BFfSCk90 .mbr-section-subtitle {
+  font-style: italic;
+  letter-spacing: 1rem;
 }
-.cid-r7vaUxokCa .mbr-text P {
-  text-align: center;
-  color: #000000;
-}
-.cid-r7vaUxokCa .mbr-text B {
-  color: #000000;
-}
-.cid-r7vaUxokCa .mbr-text {
-  text-align: center;
+.cid-r7BFfSCk90 .mbr-section-title,
+.cid-r7BFfSCk90 .mbr-section-btn {
   color: #000000;
 }
 .cid-r7v6jb6h1C {
@@ -4371,21 +4364,19 @@ body {
 .cid-r6ybfnTEvQ H2 {
   color: #ffffff;
 }
-.cid-r6KY51UHjB {
-  padding-top: 60px;
+.cid-r7BG9rCsiD {
+  padding-top: 45px;
   padding-bottom: 30px;
-  background-color: #ffffff;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
 }
-.cid-r6KY51UHjB .mbr-text,
-.cid-r6KY51UHjB blockquote {
-  color: #767676;
+.cid-r7BG9rCsiD .mbr-section-subtitle {
+  font-style: italic;
+  letter-spacing: 1rem;
 }
-.cid-r6KY51UHjB .mbr-text {
-  text-align: left;
-  color: #232323;
-}
-.cid-r6KY51UHjB .mbr-text B {
+.cid-r7BG9rCsiD .mbr-section-title,
+.cid-r7BG9rCsiD .mbr-section-btn {
   color: #000000;
+  text-align: center;
 }
 .cid-r6yjPlnRuy {
   padding-top: 15px;
@@ -5377,8 +5368,22 @@ body {
 .cid-r6QfMoYTY9 H2 {
   color: #ffffff;
 }
+.cid-r7BFQgOQph {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+}
+.cid-r7BFQgOQph .mbr-section-subtitle {
+  font-style: italic;
+  letter-spacing: 1rem;
+}
+.cid-r7BFQgOQph .mbr-section-title,
+.cid-r7BFQgOQph .mbr-section-btn {
+  color: #000000;
+  text-align: center;
+}
 .cid-r6FxYcMbFN {
-  padding-top: 90px;
+  padding-top: 0px;
   padding-bottom: 90px;
   position: relative;
   background-color: #ffffff;
@@ -7257,101 +7262,24 @@ body {
 .cid-r6FHGdcNDj .mbr-section-subtitle B {
   color: #000000;
 }
-.cid-r6FFveL4zd {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #1ea416;
-}
-.cid-r6Ww2Hx5ws {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-r6Ww2Hx5ws .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-r6Ww2Hx5ws .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-r6Ww2Hx5ws .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-r6Ww2Hx5ws .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-r6Ww2Hx5ws .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #1ea416;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-}
-.cid-r6Ww2Hx5ws .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-r6Ww2Hx5ws .mbr-gallery-item > div:hover:before {
-  opacity: 0.5 !important;
-}
-.cid-r6Ww2Hx5ws .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-r6Ww2Hx5ws .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #1ea416 !important;
-  opacity: 0.5;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-}
-.cid-r6FFvi5JZm {
-  padding-top: 15px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-r6FFvi5JZm .mbr-text,
-.cid-r6FFvi5JZm blockquote {
-  color: #767676;
-}
-.cid-r6FFvi5JZm .mbr-text P {
-  text-align: left;
-  color: #000000;
-}
 .cid-r6FFv9zDQ5 {
   padding-top: 30px;
   padding-bottom: 0px;
   background-color: #1ea416;
 }
-.cid-r6FFvafear {
+.cid-r7BGvYni6o {
   padding-top: 45px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
+  padding-bottom: 15px;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
 }
-.cid-r6FFvafear .mbr-text,
-.cid-r6FFvafear blockquote {
-  color: #767676;
+.cid-r7BGvYni6o .mbr-section-subtitle {
+  font-style: italic;
+  letter-spacing: 1rem;
 }
-.cid-r6FFvafear .mbr-text P {
-  text-align: center;
+.cid-r7BGvYni6o .mbr-section-title,
+.cid-r7BGvYni6o .mbr-section-btn {
   color: #000000;
+  text-align: center;
 }
 .cid-r6FFvb0H2D {
   padding-top: 0px;
@@ -7430,6 +7358,84 @@ body {
   padding-top: 0px;
   padding-bottom: 60px;
   background-color: #ffffff;
+}
+.cid-r6FFveL4zd {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6Ww2Hx5ws {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r6Ww2Hx5ws .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-r6Ww2Hx5ws .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-r6Ww2Hx5ws .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-r6Ww2Hx5ws .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-r6Ww2Hx5ws .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #1ea416;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-r6Ww2Hx5ws .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-r6Ww2Hx5ws .mbr-gallery-item > div:hover:before {
+  opacity: 0.5 !important;
+}
+.cid-r6Ww2Hx5ws .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-r6Ww2Hx5ws .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #1ea416 !important;
+  opacity: 0.5;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
+.cid-r6FFvi5JZm {
+  padding-top: 30px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-r6FFvi5JZm .mbr-text,
+.cid-r6FFvi5JZm blockquote {
+  color: #767676;
+}
+.cid-r6FFvi5JZm .mbr-text P {
+  text-align: left;
+  color: #000000;
 }
 .cid-r6KB0EYB6p {
   padding-top: 30px;
