--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3025,40 +3025,40 @@ body {
   color: #232323;
   font-size: 17px;
 }
-.cid-r7v7lBxPmI {
+.cid-r7Cqaj0dhW {
   padding-top: 0px;
-  padding-bottom: 15px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
-.cid-r7v7lBxPmI .mbr-section-subtitle {
+.cid-r7Cqaj0dhW .mbr-section-subtitle {
   color: #767676;
 }
-.cid-r7v7lBxPmI .media-row {
+.cid-r7Cqaj0dhW .media-row {
   display: -webkit-flex;
   justify-content: center;
   -webkit-justify-content: center;
 }
-.cid-r7v7lBxPmI .team-item {
+.cid-r7Cqaj0dhW .team-item {
   transition: all .2s;
   margin-bottom: 2rem;
 }
-.cid-r7v7lBxPmI .team-item .item-image img {
+.cid-r7Cqaj0dhW .team-item .item-image img {
   width: 100%;
 }
-.cid-r7v7lBxPmI .team-item .item-name p {
+.cid-r7Cqaj0dhW .team-item .item-name p {
   margin-bottom: 0;
 }
-.cid-r7v7lBxPmI .team-item .item-role p {
+.cid-r7Cqaj0dhW .team-item .item-role p {
   margin-bottom: 0;
 }
-.cid-r7v7lBxPmI .team-item .item-social {
+.cid-r7Cqaj0dhW .team-item .item-social {
   display: -webkit-flex;
   flex-wrap: wrap;
   justify-content: center;
   -webkit-flex-wrap: wrap;
   -webkit-justify-content: center;
 }
-.cid-r7v7lBxPmI .team-item .item-social .socicon {
+.cid-r7Cqaj0dhW .team-item .item-social .socicon {
   color: #232323;
   font-size: 17px;
 }
