create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -28,10 +28,10 @@ body {
 }
 .display-2 {
   font-family: 'Rubik', sans-serif;
-  font-size: 3rem;
+  font-size: 2.7rem;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.8rem;
+  font-size: 4.32rem;
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
@@ -66,9 +66,9 @@ body {
     line-height: calc( 1.4 * (2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.4rem;
-    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.16rem;
+    font-size: calc( 1.595rem + (2.7 - 1.595) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.595rem + (2.7 - 1.595) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.72rem;
@@ -6760,7 +6760,7 @@ body {
 }
 .cid-r7BGvYni6o {
   padding-top: 45px;
-  padding-bottom: 15px;
+  padding-bottom: 0px;
   background: linear-gradient(45deg, #ffffff, #ffffff);
 }
 .cid-r7BGvYni6o .mbr-section-subtitle {
@@ -6772,285 +6772,68 @@ body {
   color: #000000;
   text-align: center;
 }
-.cid-r7ZflWB5kp {
+.cid-r7ZsYOoY9O {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-r7ZflWB5kp .content-slider {
-  display: -webkit-flex;
-  justify-content: center;
-  -webkit-justify-content: center;
-}
-.cid-r7ZflWB5kp .modal-body .close {
+.cid-r7ZsYOoY9O .mbr-slider .carousel-control {
   background: #1b1b1b;
 }
-.cid-r7ZflWB5kp .modal-body .close span {
-  font-style: normal;
-}
-.cid-r7ZflWB5kp .carousel-inner > .active,
-.cid-r7ZflWB5kp .carousel-inner > .next,
-.cid-r7ZflWB5kp .carousel-inner > .prev {
-  display: -webkit-flex;
-}
-.cid-r7ZflWB5kp .carousel-control .icon-next,
-.cid-r7ZflWB5kp .carousel-control .icon-prev {
-  margin-top: -18px;
-  font-size: 40px;
-  line-height: 27px;
-}
-.cid-r7ZflWB5kp .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-r7ZflWB5kp .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-r7ZflWB5kp .content-slider-wrap {
-    width: 100%!important;
-  }
-}
-.cid-r7ZflWB5kp .boxed-slider {
-  position: relative;
-  padding: 93px 0;
-}
-.cid-r7ZflWB5kp .boxed-slider > div {
-  position: relative;
-}
-.cid-r7ZflWB5kp .container img {
-  width: 100%;
-}
-.cid-r7ZflWB5kp .container img + .row {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  transform: translateY(-50%);
-  z-index: 2;
-}
-.cid-r7ZflWB5kp .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-r7ZflWB5kp .mbr-table-cell {
-  padding: 0;
-}
-.cid-r7ZflWB5kp .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-r7ZflWB5kp .carousel-caption {
-  top: 50%;
-  right: 0;
-  bottom: auto;
-  left: 0;
-  display: -webkit-flex;
-  align-items: center;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  -webkit-align-items: center;
-}
-.cid-r7ZflWB5kp .mbr-overlay {
-  z-index: 1;
-}
-.cid-r7ZflWB5kp .container-slide.container {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-r7ZflWB5kp .carousel-item {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -o-transition: -o-transform 0.6s ease-in-out;
-  -webkit-transition: -webkit-transform 0.6s ease-in-out;
-  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-@media (max-width: 576px) {
-  .cid-r7ZflWB5kp .carousel-item .container {
-    width: 100%;
-  }
-}
-.cid-r7ZflWB5kp .carousel-item-next.carousel-item-left,
-.cid-r7ZflWB5kp .carousel-item-prev.carousel-item-right {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-.cid-r7ZflWB5kp .active.carousel-item-right,
-.cid-r7ZflWB5kp .carousel-item-next {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-.cid-r7ZflWB5kp .active.carousel-item-left,
-.cid-r7ZflWB5kp .carousel-item-prev {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-.cid-r7ZflWB5kp .mbr-slider .carousel-control {
-  top: 50%;
-  width: 50px;
-  height: 50px;
-  margin-top: -1.5rem;
-  font-size: 35px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all .3s;
-}
-.cid-r7ZflWB5kp .mbr-slider .carousel-control.carousel-control-prev {
+.cid-r7ZsYOoY9O .mbr-slider .carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-r7ZflWB5kp .mbr-slider .carousel-control.carousel-control-next {
+.cid-r7ZsYOoY9O .mbr-slider .carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-r7ZflWB5kp .mbr-slider .carousel-control .mbr-iconfont {
-  font-size: 1.5rem;
+.cid-r7ZsYOoY9O .mbr-slider .modal-body .close {
+  background: #1b1b1b;
 }
-@media (max-width: 767px) {
-  .cid-r7ZflWB5kp .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-r7ZflWB5kp .mbr-slider .carousel-indicators {
+.cid-r7ZsYOoY9O .mbr-gallery-item > div::before {
+  content: '';
   position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-r7ZflWB5kp .mbr-slider .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: .5;
-  transition: all .3s;
-}
-.cid-r7ZflWB5kp .mbr-slider .carousel-indicators li.active,
-.cid-r7ZflWB5kp .mbr-slider .carousel-indicators li:hover {
-  opacity: .9;
-}
-.cid-r7ZflWB5kp .mbr-slider .carousel-indicators li::after,
-.cid-r7ZflWB5kp .mbr-slider .carousel-indicators li::before {
-  content: none;
-}
-.cid-r7ZflWB5kp .mbr-slider .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 576px) {
-  .cid-r7ZflWB5kp .mbr-slider .carousel-indicators {
-    display: none !important;
-  }
-}
-.cid-r7ZflWB5kp .mbr-slider > .container img {
-  width: 100%;
-}
-.cid-r7ZflWB5kp .mbr-slider > .container img + .row {
-  position: absolute;
-  top: 50%;
-  right: 0;
   left: 0;
-  z-index: 2;
-  -moz-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-r7ZflWB5kp .mbr-slider > .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-@media (max-width: 576px) {
-  .cid-r7ZflWB5kp .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-r7ZflWB5kp .mbr-slider .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-r7ZflWB5kp .mbr-slider .mbr-table-cell {
-  padding: 0;
-}
-.cid-r7ZflWB5kp .carousel-item .container.container-slide {
-  position: initial;
-  width: auto;
-  min-height: 0;
-}
-.cid-r7ZflWB5kp .full-screen .slider-fullscreen-image {
-  min-height: 100vh;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.cid-r7ZflWB5kp .full-screen .slider-fullscreen-image.active {
-  display: -o-flex;
-}
-.cid-r7ZflWB5kp .full-screen .container {
-  width: auto;
-  padding-right: 0;
-  padding-left: 0;
-}
-.cid-r7ZflWB5kp .full-screen .carousel-item .container.container-slide {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-r7ZflWB5kp .full-screen .carousel-item .container.container-slide img {
-  display: none;
-}
-.cid-r7ZflWB5kp .mbr-background-video-preview {
-  position: absolute;
   top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-.cid-r7ZflWB5kp .mbr-overlay ~ .container-slide {
-  z-index: auto;
-}
-.cid-r7ZflWB5kp .mbr-slider.slide .container {
-  overflow: hidden;
-  padding: 0;
-}
-.cid-r7ZflWB5kp .carousel-inner {
+  width: 100%;
   height: 100%;
+  background: #1ea416;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
 }
-.cid-r7ZflWB5kp .slider-fullscreen-image {
-  height: 100%;
+.cid-r7ZsYOoY9O .mbr-gallery-item > div:hover .mbr-gallery-title::before {
   background: transparent !important;
 }
-.cid-r7ZflWB5kp .image_wrapper {
-  height: 440px;
+.cid-r7ZsYOoY9O .mbr-gallery-item > div:hover:before {
+  opacity: 0.5 !important;
+}
+.cid-r7ZsYOoY9O .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
   width: 100%;
-  position: relative;
-  display: inline-block;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
 }
-.cid-r7ZflWB5kp .image_wrapper img {
-  width: auto !important;
+.cid-r7ZsYOoY9O .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
   height: 100%;
-}
-.cid-r7ZflWB5kp .carousel-item .container-slide {
-  text-align: center;
-}
-.cid-r7ZflWB5kp .content-slider-wrap {
-  width: 52%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #1ea416 !important;
+  opacity: 0.5;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
 }
 .cid-r7ZnavqLfR {
-  padding-top: 30px;
+  padding-top: 0px;
   padding-bottom: 15px;
   background: linear-gradient(45deg, #ffffff, #ffffff);
 }
