create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4226,26 +4226,19 @@ body {
 .cid-r6ybfnTEvQ H2 {
   color: #ffffff;
 }
-.cid-r7YQP0wH2a {
+.cid-r845mhp6tc {
   padding-top: 45px;
   padding-bottom: 0px;
   background: linear-gradient(45deg, #ffffff, #ffffff);
 }
-.cid-r7YQP0wH2a .mbr-section-subtitle {
+.cid-r845mhp6tc .mbr-section-subtitle {
   font-style: italic;
   letter-spacing: 1rem;
 }
-.cid-r7YQP0wH2a .mbr-section-title,
-.cid-r7YQP0wH2a .mbr-section-btn {
+.cid-r845mhp6tc .mbr-section-title,
+.cid-r845mhp6tc .mbr-section-btn {
   color: #000000;
   text-align: center;
-}
-.cid-r7YQP0wH2a .mbr-section-title,
-.cid-r7YQP0wH2a .mbr-section-btn DIV {
-  text-align: left;
-}
-.cid-r7YQP0wH2a P {
-  color: #000000;
 }
 .cid-r7YFe9zPqq {
   padding-top: 15px;
