--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8870,7 +8870,7 @@ body {
   color: #767676;
 }
 .cid-r6Kn4tulQw .mbr-section-subtitle {
-  color: #767676;
+  color: #000000;
   font-weight: 300;
 }
 .cid-r6Kn4tulQw .toggle-content {
@@ -8940,6 +8940,10 @@ body {
   color: #000000;
 }
 .cid-r6Kn4tulQw H2 {
+  text-align: center;
+}
+.cid-r6Kn4tulQw .mbr-section-subtitle DIV {
+  color: #000000;
   text-align: center;
 }
 .cid-r6Kos5vVCe {
